src/style.css
body {
  background: linear-gradient(to top, #f1eeee 100%, #e6dadb 0%);
}

li {
  list-style: none;
  text-align: left;
  font-size: 14px;
}

.wrapper {
  background: white;
  max-width: 600px;
  margin: 0 auto;
  border: 2px solid rgb(0, 0, 0);
  border-radius: 5px;
  padding: 20px;
  margin-top: 10%;
}

.container {
  font-family: "Raleway", sans-serif;
}

.weather-city {
  border-radius: 10px;
  width: 100%;
}

.search {
  border-radius: 10px;
  margin: 5px;
}

.buttonCurrentLocation {
  border-radius: 5px;
  border: 1px solid white;
  background-color: white;
  padding-right: 0%;
  padding-left: 0%;
}

#geoLocalisation {
  font-size: 9px;
}

#icon {
  align-items: left;
}

.weatherNow {
  text-align: center;
}

.tempNow {
  font-size: 40px;
  vertical-align: -30%;
}

.units {
  font-size: 16px;
  vertical-align: -80%;
}

.tempNowHigh {
  color: orange;
  text-align: right;
}

.tempNowLow {
  color: blue;
}
.descriptionNow:first-letter {
  text-transform: capitalize;
}

.forecastDate {
  text-align: center;
}

.forecastIcons {
  text-align: center;
}

.forecastTempHigh {
  color: orange;
  text-align: center;
}

.forecastTempLow {
  color: blue;
  text-align: center;
  font-size: 12px;
}

footer {
  font-family: "Space Mono", monospace;
  font-size: small;
  text-align: center;
  margin-top: 10px;
}

